# aviutl2_sdk_mirror

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CREDITS.md  CREDITS.txt  README.md  aviutl2.toml  mise.toml
.github/workflows/: update.yml
examples/: AviReader.cpp  AviSaver.cpp  MediaFilter.cpp  MediaObject.cpp  ScriptModule.cpp  ScriptModuleSample.obj2  WindowClient.cpp
include/aviutl2_sdk/: cache2.h  config2.h  filter2.h  input2.h  module2.h  output2.h  plugin2.h
scripts/: README.md  Rakefile  base_changelog.md  base_readme.md  package.json
